--- a/config/nvim/snippets/package.json
+++ b/config/nvim/snippets/package.json
@@ -7,6 +7,12 @@
 					"gitcommit"
 				],
 				"path": "./snippets/rakuten_gitcommit.json"
+			},
+			{
+				"language": [
+					"go"
+				],
+				"path": "./snippets/go.json"
 			}
 		]
 	}
